--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,69 @@ html,
 body {
   height: 100%;
 }
+html {
+  font-size: 62.5%;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-size: 2rem;
+}
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  font-size: 1.6rem;
+  height: 1200px;
+  border: 5px solid tomato;
+}
+header {
+  border: 5px solid green;
+  margin: 10px;
+  background-color: lightgrey;
+}
+header nav {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px 0;
+  border: 1px solid blue;
+}
+header nav a {
+  border: 5px solid black;
+  font-size: 2rem;
+  margin: 20px 1rem;
+}
+.middle-content {
+  border: 5px solid black;
+  width: 100%;
+  height: 600px;
+  padding: 40px 20px;
+  background-color: lightgrey;
+}
+.middle-content .middle {
+  padding: 20px;
+}
+.middle-content h1 {
+  font-size: 4rem;
+  margin: 20px 0;
+}
+.middle-content h3 {
+  padding: 10px 0% 20px;
+  border-bottom: 1px solid black;
+}
+.bottom-content {
+  width: 100%;
+}
+.bottom-content .experience {
+  display: flex;
+  padding: 40px;
+}
+.bottom-content .Introduction {
+  margin: 20px 1rem;
+  width: 50%;
+}
+.bottom-content .Skills {
+  margin: 20px 1rem;
+  width: 50%;
+}
