--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,85 @@ html, body {
 	height: 100%;
 }
 
+html {
+	font-size: 62.5%;
+}
+
+h1, h2, h3, h4, h5 {
+	font-size: 2rem;
+}
+
+.container {
+	max-width: 900px;
+	margin: 0 auto;
+	font-size: 1.6rem;
+	height: 1200px;
+	border: 5px solid tomato;
+}
+
+header {
+	border: 5px solid green;
+	margin: 10px;
+	background-color: lightgrey;
+
+nav {
+	display: flex;
+	justify-content: flex-end;
+	margin: 20px 0;
+	border: 1px solid blue;
+
+	a {
+		border: 5px solid black;
+		font-size: 2rem;
+		margin: 20px 1rem;
+	}
+  } //nav//
+} //header//
+
+.middle-content {
+	border: 5px solid black;
+	width: 100%;
+	height: 600px;
+	padding: 40px 20px;
+	background-color: lightgrey;
+
+.middle {
+	padding: 20px;	
+}
+
+h1 {
+	font-size: 4rem;
+	margin: 20px 0;
+}
+
+h3 {
+	padding: 10px 0% 20px;
+	border-bottom: 1px solid black;
+ }
+} 
+
+.bottom-content {
+	width: 100%;
+	
+	.experience {
+		display: flex;
+		padding: 40px;
+	}
+
+	.Introduction {
+		margin: 20px 1rem;
+		width: 50%;
+	}
+
+	.Skills {
+		margin: 20px 1rem;
+		width: 50%;
+	}
+
+
+}
+
+
+
+
+
