--- a/less/index.less
+++ b/less/index.less
@@ -49,6 +49,18 @@ table {
 }
 
 /* Set every element's box-sizing to border-box */
+// variable //
+@color: #0A0C57;
+
+// mixins //
+.border {
+	border: 1px dotted black;
+} 
+
+.padding {
+	padding: 10px 0;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -65,39 +77,58 @@ h1, h2, h3, h4, h5 {
 	font-size: 2rem;
 }
 
+p {
+	color: @color;
+}
+
 .container {
-	max-width: 900px;
+	width: 900px;
 	margin: 0 auto;
 	font-size: 1.6rem;
 	height: 1200px;
-	border: 5px solid tomato;
+
+	@media(max-width: 500px) {
+		width: 500px;
+	}
 }
 
 header {
-	border: 5px solid green;
 	margin: 10px;
-	background-color: lightgrey;
 
-nav {
-	display: flex;
-	justify-content: flex-end;
-	margin: 20px 0;
-	border: 1px solid blue;
+	nav {
+		display: flex;
+		justify-content: flex-end;
+		margin: 20px 0;
+
+		@media(max-width: 500px) {
+			justify-content: space-around;
+		}
 
 	a {
-		border: 5px solid black;
 		font-size: 2rem;
 		margin: 20px 1rem;
-	}
-  } //nav//
-} //header//
+		color: @color
+	  }
+   } 
+} 
+
 
 .middle-content {
-	border: 5px solid black;
-	width: 100%;
+	width: 90%;
 	height: 600px;
 	padding: 40px 20px;
-	background-color: lightgrey;
+	margin: 0 5%;
+	background-color: lightblue;
+
+	@media(max-width: 500px) {
+		height: 550px;
+	}
+
+	@media(max-width: 500px) {
+		img {
+			width: 100%;
+		}
+	}
 
 .middle {
 	padding: 20px;	
@@ -125,6 +156,7 @@ h3 {
 	.Introduction {
 		margin: 20px 1rem;
 		width: 50%;
+		padding-right: 10%
 	}
 
 	.Skills {
@@ -132,7 +164,62 @@ h3 {
 		width: 50%;
 	}
 
+	h2 {
+		font-size: 3rem;
+		margin-bottom: 20px;
+		color: @color;
+	}
 
+	p.first {
+		.border;
+		.padding;
+	}
+
+	p.second {
+		.border;
+		.padding;
+	}
+
+	p.third {
+		.border;
+		.padding;
+	}
+}
+
+.work {
+	padding: 0 40px;
+	height: 100px;
+
+	h2 {
+		color: @color;
+		width: 100%;
+		margin-bottom: 20px;
+		font-size: 3rem;
+	}
+}
+
+footer {
+	width: 90%;
+	margin: 0 auto;
+	height: 90px;
+	background-color: azure;
+
+	@media(max-width: 500px) {
+		width: 100%;
+	}
+
+	div {
+		height: 90px;
+		padding: 35px;
+		display: flex;
+		justify-content: space-between;
+
+		@media(max-width: 500px) {
+			padding: 10px 0;
+			flex-direction: column;
+			align-items: center;
+		}
+	}
 }
 
 
