--- a/less/index.less
+++ b/less/index.less
@@ -83,6 +83,7 @@ p {
 
 .container {
 	width: 900px;
+	padding: 10px;
 	margin: 0 auto;
 	font-size: 1.6rem;
 	height: 1200px;
@@ -188,7 +189,7 @@ h3 {
 
 .work {
 	padding: 0 40px;
-	height: 100px;
+	height: 80px;
 
 	h2 {
 		color: @color;
