--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,7 @@ p {
 }
 .container {
   width: 900px;
+  padding: 10px;
   margin: 0 auto;
   font-size: 1.6rem;
   height: 1200px;
@@ -245,7 +246,7 @@ header nav a {
 }
 .work {
   padding: 0 40px;
-  height: 100px;
+  height: 80px;
 }
 .work h2 {
   color: #0A0C57;
